--- a/src/Components/AboutComp/about.css
+++ b/src/Components/AboutComp/about.css
@@ -45,3 +45,12 @@
 .aboutUs > h1 {
   margin-bottom: 48px;
 }
+
+.card-team {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  flex-wrap: wrap;
+  margin: 0 5%;
+}
