--- a/src/Components/AboutComp/about.css
+++ b/src/Components/AboutComp/about.css
@@ -32,10 +32,10 @@
   height: 100%;
   border-radius: 16px;
 }
-.row {
+/* .row {
   align-items: center;
   width: 100%;
-}
+} */
 .aboutUs {
   height: 100vh;
   text-align: center;
