--- a/src/Pages/FormPage/form.css
+++ b/src/Pages/FormPage/form.css
@@ -67,3 +67,28 @@ form {
   height: 35px;
   border-color: transparent;
 }
+
+.dropdown-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-top: 20px;
+}
+
+h2 {
+  font-size: 20px;
+  margin-bottom: 10px;
+}
+
+select {
+  padding: 10px;
+  font-size: 16px;
+}
+
+p {
+  margin-top: 10px;
+}
+
+.date {
+  margin: 10px;
+}
