--- a/src/Components/AboutComp/about.css
+++ b/src/Components/AboutComp/about.css
@@ -32,75 +32,22 @@
   height: 100%;
   border-radius: 16px;
 }
-.row {
-  align-items: center;
-  width: 100%;
-}
+
 .aboutUs {
   height: 100vh;
   text-align: center;
   align-items: center;
   background-color: #fc6aa7;
-  padding-top: 20px;
 }
 .aboutUs > h1 {
   margin-bottom: 48px;
-  color: white;
 }
-.aboutUs > p {
-  font-size: 20px;
-}
-.cardItem {
-  margin-top: 3rem;
-  align-items: center;
-  margin-left: 20px;
-}
-.cardItem button {
-  background-color: #fc6aa7;
-  border: 2px solid #f5619f;
-}
-.cardItem button:hover {
-  background-color: #fc6aa7;
-  border: 2px solid #f5619f;
-}
-.cardItemTeam {
-  border-radius: 10px;
-  margin: 10px;
-  border: 2px solid black;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-}
-.card {
+
+.card-team {
   display: flex;
+  flex-direction: row;
+  align-items: center;
   justify-content: center;
-  border-radius: 10px;
-  background-color: #ffffff;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-  padding: 20px;
-  text-align: center;
-  padding: 10px;
-}
-
-.card img {
-  width: 150px;
-  border-radius: 50%;
-}
-
-.card h2 {
-  margin-top: 10px;
-  margin-bottom: 0;
-}
-
-.connect-button {
-  margin-top: 10px;
-  padding: 10px 50px;
-  background-color: #4caf50;
-  color: white;
-  border: none;
-  border-radius: 5px;
-  font-size: 16px;
-  cursor: pointer;
-}
-
-.connect-button:hover {
-  background-color: #45a049;
+  flex-wrap: wrap;
+  margin: 0 5%;
 }
