--- a/src/Components/AboutComp/about.css
+++ b/src/Components/AboutComp/about.css
@@ -36,7 +36,7 @@ body {
   height: 100%;
   border-radius: 16px;
 }
-.row {
+.about-team {
   align-items: center;
   width: 100%;
 }
@@ -76,8 +76,6 @@ body {
 }
 .cardItemTeam {
   margin: 10px;
-}
-.card {
   display: flex;
   justify-content: center;
   border-radius: 10px;
@@ -87,6 +85,7 @@ body {
   text-align: center;
   padding: 10px;
 }
+
 .cardItemTeam .card-img-top {
   width: 100%;
   height: 210px;
