--- a/src/Components/OfficeComp/office.css
+++ b/src/Components/OfficeComp/office.css
@@ -20,3 +20,19 @@
 .lihat-detail:hover {
   color: #f94892;
 }
+
+.name-comment {
+  font-size: 1rem;
+}
+.stars-comment {
+  width: 100px;
+  margin-top: 0;
+}
+
+.tgl-comment {
+  font-size: .75rem;
+}
+
+.comment-office {
+  font-size: 1.2rem;
+}
