--- a/src/Components/AboutComp/about.css
+++ b/src/Components/AboutComp/about.css
@@ -1,7 +1,8 @@
 .about {
   height: 100vh;
   top: 0;
-  padding: 180px 0 100px 0;
+  /* padding: 180px 0 100px 0; */
+  margin-top: 8rem;
   align-items: center;
   justify-items: center;
 }
@@ -15,16 +16,15 @@
 .about .about-hopePoints > h1 {
   font-size: 30px;
   font-weight: 700;
-  margin-left: 0;
+  margin-left: 55px;
+  margin-top: 55px;
 }
 .about .about-hopePoints > p {
-  margin-top: 15px;
   margin-left: 55px;
   font-size: 22px;
 }
 .about .image > img {
-  width: 350px;
-  height: 100%;
+  width: 400px;
   border-radius: 16px;
   margin-right: 10em;
 }
@@ -90,9 +90,8 @@
   margin-bottom: 0;
 }
 
-@media (max-width: 633px) {
+@media (max-width: 992px) {
   .about {
-    padding: 50px 0;
     text-align: center;
   }
 
@@ -164,22 +163,22 @@
     padding-right: 20px;
   }
 }
-@media screen and (max-width: 992px) {
+/* @media screen and (max-width: 992px) {
   .about .image > img {
     width: 250px;
   }
-}
-@media screen and (min-width: 633px) {
-  /* .about .image > img {
+} */
+/* @media screen and (min-width: 633px) {
+  .about .image > img {
     height: 70%;
-  } */
+  }
   .about .about-hopePoints > h1 {
     font-size: 2.5rem;
   }
   .about .about-hopePoints > p {
     margin-left: 0;
   }
-}
+} */
 
 @media screen and (max-width: 375px) {
   .about .about-hopePoints > h1 {
