--- a/src/Components/HomeComp/home.css
+++ b/src/Components/HomeComp/home.css
@@ -64,9 +64,6 @@
 }
 
 .featureForm {
-  /* Styling untuk setiap card */
-  /* display: flex;
-  flex-direction: column; */
   align-items: center;
   text-align: center;
   padding: 20px;
@@ -91,34 +88,10 @@
   text-align: left;
 }
 
-/* .feature {
-  padding-top: 5rem;
-  padding-bottom: 5rem;
-  background-color: #ffa1c9;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-} */
 .feature > h1 {
   text-align: center;
   color: white;
 }
-/* 
-.feature .overlay .featureForm > img {
-  width: 100%;
-  margin-bottom: 20px;
-}
-
-.feature .overlay {
-  color: white;
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  text-align: center;
-  margin-top: 5rem;
-  border: 5px solid white;
-  gap: 100px;
-} */
 .feature .overlay .featureForm {
   /* padding: 50px;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
@@ -127,6 +100,15 @@
 
   cursor: pointer;
 }
+.link-feature {
+  font-size: 20px;
+  text-decoration: none;
+  color: white;
+  background-color: #f5619f;
+  padding: 15px;
+  border-radius: 10px;
+}
+
 .feature > button {
   min-height: 44px;
   min-width: 44px;
@@ -147,8 +129,8 @@
 }
 
 /* Dropdown */
+
 .faq {
-  height: 100vh;
   padding: 60px 0;
 }
 .faq-title > h2 {
@@ -161,32 +143,7 @@
   color: #333333;
   font-size: 20px;
 }
-.faq .faq-list {
-  padding: 0;
-  list-style: none;
-}
-.faq .faq-list li {
-  background-color: #f94892;
-  margin-bottom: 10px;
-  border-radius: 10px;
-  padding: 10px 40px;
-}
-.faq .faq-list a {
-  display: block;
-  position: relative;
-  font-size: 16px;
-  font-weight: 600;
-  color: white;
-  text-decoration: none;
-}
 
-.faq .faq-list i {
-  font-size: 16px;
-  position: absolute;
-  left: -25px;
-  top: 6px;
-  transition: 1s;
-}
 .faq-title {
   text-align: center;
   font-size: 17px;
@@ -195,14 +152,76 @@
   padding-bottom: 10px;
   color: #ffffff;
 }
-
-.faq .faq-list p {
-  padding-top: 5px;
-  margin-bottom: 20px;
-  font-size: 15px;
-  color: #f94892;
+.faq-list {
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
+/* .faq_area {
+  position: relative;
+  z-index: 1;
+  background-color: #f5f5ff;
+} */
 
+/* .faq-accordian {
+  position: relative;
+  z-index: 1;
+} */
+.faq-accordian .card {
+  /* position: relative; */
+  z-index: 1;
+  margin-bottom: 1.5rem;
+}
+.faq-accordian .card:last-child {
+  margin-bottom: 0;
+}
+.faq-accordian .card .card-header {
+  background-color: #ffffff;
+  padding: 0;
+  border-bottom-color: #ebebeb;
+  border-radius: 10px;
+  box-shadow: 0px 2px 5px #c5c4c4;
+}
+.faq-accordian .card .card-header h6 {
+  cursor: pointer;
+  padding: 1.75rem 2rem;
+  color: #3f43fd;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  -ms-grid-row-align: center;
+  align-items: center;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
+}
+.faq-accordian .card .card-header h6 span {
+  font-size: 1.5rem;
+}
+.faq-accordian .card .card-header h6.collapsed {
+  color: #070a57;
+}
+.faq-accordian .card .card-header h6.collapsed span {
+  -webkit-transform: rotate(-180deg);
+  transform: rotate(-180deg);
+}
+.faq-accordian .card .card-body {
+  padding: 1.75rem 2rem;
+  box-shadow: 0px 0px 5px #c5c4c4;
+}
+.faq-accordian .card .card-body p:last-child {
+  margin-bottom: 0;
+}
+.link {
+  color: #f94892;
+  text-decoration: none;
+}
+.link:hover {
+  text-decoration: underline;
+  color: black;
+}
 /* .collapsed i.fas.fa-arrow-up {
     
 } */
@@ -238,6 +257,45 @@
   }
 }
 /* Stop Animasi */
+
+@media screen and (max-width: 992px) {
+  .hero {
+    padding: 100px 0 100px 0;
+  }
+
+  .hero .d-flex {
+    display: flex;
+    flex-direction: column-reverse;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .hero .wrap-text {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    margin: 30px 10px 0 10px;
+  }
+
+  .hero .image {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 0 10px;
+  }
+
+  .hero .image > img {
+    width: 100%;
+  }
+}
+@media screen and (max-width: 580px) {
+  .feature .overlay {
+    display: flex;
+    flex-direction: column;
+  }
+}
 
 @media screen and (max-width: 320px) {
   .hero .wrap-text > h1 {
