--- a/src/Components/AboutComp/about.css
+++ b/src/Components/AboutComp/about.css
@@ -1,81 +1,79 @@
-.about {
-  height: 100vh;
+.about-container {
+  min-height: 100vh;
   top: 0;
-  /* padding: 180px 0 100px 0; */
-  margin-top: 8rem;
+  padding: 150px 0 0 0;
+  background-color: #ffa1c9;
+}
+
+.about {
+  display: flex;
+  justify-content: space-around;
   align-items: center;
-  justify-items: center;
 }
 
-.about .about-hopePoints {
+.about .wrap-about {
+  display: flex;
   flex-direction: column;
-  margin-right: 10em;
-  margin-left: 50px;
+  justify-content: center;
+  margin-right: 8%;
 }
 
-.about .about-hopePoints > h1 {
-  font-size: 30px;
+.about .wrap-about > h1 {
+  font-size: 2.5rem;
   font-weight: 700;
-  margin-left: 55px;
-  margin-top: 55px;
+  color: black;
+  margin-bottom: 20px;
 }
-.about .about-hopePoints > p {
-  margin-left: 55px;
-  font-size: 22px;
+
+.about .wrap-about > p {
+  font-size: 1.2rem;
 }
 .about .image > img {
-  width: 400px;
-  border-radius: 16px;
-  margin-right: 10em;
+  width: 450px;
 }
-.about-team {
+
+/* Team section */
+.team {
   align-items: center;
-  width: 100%;
+  margin-top: 3.5rem;
+  min-height: 100vh;
 }
-.aboutUs {
-  /* height: 113vh; */
-  align-items: center;
-  background-color: #fc6aa7;
-  padding-top: 20px;
-}
-.aboutUs > h1 {
+
+.title-team {
   text-align: center;
-  color: white;
+  color: #f94892;
   font-weight: 700;
+  margin-bottom: 1.5rem;
 }
-.aboutUs > p {
+
+.description-team {
   text-align: center;
-  font-size: 20px;
-  padding-left: 6rem;
-  padding-right: 6rem;
-  color: white;
+  font-size: 18px;
+  color: black;
 }
+
 .cardItem {
   margin-top: 3rem;
   align-items: center;
-  margin-left: 20px;
 }
-.cardItem button {
-  background-color: #fc6aa7;
-  border: 2px solid #f5619f;
-  padding: 6px 10px;
-  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-  border-radius: 5px;
-  color: white;
-}
-.cardItem button:hover {
-  opacity: 0.7;
-}
+
 .cardItemTeam {
-  margin: 10px;
+  margin-bottom: 2.5rem;
   display: flex;
   justify-content: center;
   border-radius: 10px;
   background-color: #ffffff;
-  box-shadow: 6px 8px 10px 0 rgba(0, 0, 0, 0.2);
+  box-shadow: 6px 8px 10px 0 rgb(211, 36, 94);
   padding: 20px;
   text-align: center;
-  padding: 10px;
+  -webkit-border-radius: 10px;
+  -moz-border-radius: 10px;
+  -ms-border-radius: 10px;
+  -o-border-radius: 10px;
+}
+
+.logo-ref-team {
+  padding: 15px 15px;
 }
 
 .cardItemTeam .card-img-top {
@@ -90,108 +88,47 @@
   margin-bottom: 0;
 }
 
-@media (max-width: 992px) {
-  .about {
-    text-align: center;
+@media screen and (max-width: 950px) {
+  .about-container {
+    padding: 100px 0 100px 0;
   }
 
-  .about .d-flex {
-    flex-direction: column;
+  .about {
+    display: flex;
+    flex-direction: column-reverse;
+    justify-content: center;
     align-items: center;
   }
 
-  .about .about-hopePoints {
-    margin-right: 0;
-    margin-left: 0;
-  }
-
-  .about .about-hopePoints > h1 {
-    margin-left: 0;
-    margin-top: 2rem;
-  }
-
-  .about .about-hopePoints > p {
-    margin-top: 15px;
-    margin-left: 0;
-  }
-
-  .about .image > img {
-    width: 350px;
-    margin-right: 0;
-    margin-top: 2rem;
-  }
-  .cardItem {
-    margin-top: 1.5rem;
+  .about .wrap-about {
     display: flex;
     flex-direction: column;
+    justify-content: center;
     align-items: center;
-    margin-left: 0;
+    text-align: center;
+    margin: 30px 10px 0 10px;
   }
 
-  .cardItemTeam {
-    width: 90%;
-    margin: 10px 0;
+  .about .image {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 0 10px;
   }
 
-  .cardItemTeam .card-img-top {
-    height: 180px;
-    border-radius: 8px;
-  }
-
-  .cardItemTeam .card-body {
-    padding: 10px;
-  }
-
-  .cardItemTeam h2 {
-    font-size: 18px;
-    margin-top: 8px;
-    margin-bottom: 0;
-  }
-
-  .cardItemTeam p {
-    font-size: 14px;
-    margin: 0;
-  }
-
-  .cardItemTeam .connect-button {
-    margin-top: 10px;
-    padding: 6px 15px;
-    font-size: 14px;
-  }
-  .aboutUs > p {
-    padding-left: 20px;
-    padding-right: 20px;
+  .about .image > img {
+    width: 100%;
   }
 }
-/* @media screen and (max-width: 992px) {
-  .about .image > img {
-    width: 250px;
-  }
-} */
-/* @media screen and (min-width: 633px) {
-  .about .image > img {
-    height: 70%;
-  }
-  .about .about-hopePoints > h1 {
-    font-size: 2.5rem;
-  }
-  .about .about-hopePoints > p {
-    margin-left: 0;
-  }
-} */
 
-@media screen and (max-width: 375px) {
-  .about .about-hopePoints > h1 {
+@media screen and (max-width: 400px) {
+  .about .wrap-about > h1 {
     font-size: 2.5rem;
   }
-  .about .about-hopePoints > h1 {
-    font-size: 2.5rem;
+  .about .wrap-about > p {
+    font-size: 1rem;
   }
-  .about {
-    height: 150vh;
-  }
-  .about .image > img {
-    width: 270px;
-    margin-right: 0;
+  .description-team {
+    font-size: 1rem;
   }
 }
