--- a/src/Components/DashboardComp/dashboardcomp.css
+++ b/src/Components/DashboardComp/dashboardcomp.css
@@ -1,3 +1,31 @@
+.container-dashboard {
+  margin: 45px 15px 0 15px;
+  min-height: 80vh;
+}
+
+.custom-pagination .page-link {
+  background-color: white;
+  border-color: #f94892;
+  color: #f94892;
+}
+
+.custom-pagination .page-link:hover {
+  background-color: #f94892;
+  border-color: #f94892;
+  color: white;
+}
+
+.custom-pagination .page-link:focus {
+  box-shadow: none;
+  color: #f94892;
+}
+
+.custom-pagination .page-item.active .page-link {
+  background-color: #f94892;
+  border-color: #f94892;
+  color: white;
+}
+
 .sidebar {
   min-height: 100vh;
 }
@@ -46,10 +74,6 @@
 
 .icon-sidebar {
   margin-right: 10px;
-}
-
-.container-dashboard {
-  margin: 45px 15px 0 15px;
 }
 
 @media screen and (max-width: 1025px) {
