--- a/src/Components/MapComp/popup.css
+++ b/src/Components/MapComp/popup.css
@@ -3,26 +3,51 @@
 }
 
 .popup-content {
-  width: 300px;
-  height: 400px;
+  width: 200px;
   display: flex;
   flex-direction: column;
   justify-content: space-around;
+  padding: 10px;
 }
 
 .popup-content h2 {
   font-size: 1.2rem;
   text-align: center;
-  color: #ff88ba;
+  color: #f94892;
 }
 
 .popup-content p {
-  margin: 0px;
+  margin: 3px 0;
 }
+
+.popup-content span {
+  font-weight: 600;
+}
+
 .nama-dinas {
   font-size: 1rem;
+  text-align: center;
 }
 
 .stars {
-  margin: 10px;
+  margin-bottom: 20px;
+}
+
+.spinner {
+  width: 24px;
+  height: 24px;
+  border-radius: 50%;
+  border: 4px solid #f3f3f3;
+  border-top: 4px solid #3498db;
+  animation: spin 1s linear infinite;
+  margin: 0 auto;
+}
+
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
 }
